fix errors from dark mode

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -220,6 +220,7 @@ html {
 
 body {
   margin: 0; /* 1 */
+  scroll-behavior: smooth;
   line-height: inherit; /* 2 */
 }
 
